2003-02-15  Roland McGrath  <roland@frob.com>

	* Makefile (installhdrs): Add generated headers only ifndef no_deps.

2002-06-13  Roland McGrath  <roland@frob.com>

	* dir-chg.c: Don't include stub header, trivfs.h now gets those decls.
	* dir-link.c: Likewise.
	* dir-lookup.c: Likewise.
	* dir-mkdir.c: Likewise.
	* dir-mkfile.c: Likewise.
	* dir-readdir.c: Likewise.
	* dir-rename.c: Likewise.
	* dir-rmdir.c: Likewise.
	* dir-unlink.c: Likewise.
	* file-access.c: Likewise.
	* file-chauthor.c: Likewise.
	* file-chflags.c: Likewise.
	* file-chg.c: Likewise.
	* file-chmod.c: Likewise.
	* file-chown.c: Likewise.
	* file-get-fs-options.c: Likewise.
	* file-get-storage-info.c: Likewise.
	* file-get-trans.c: Likewise.
	* file-get-transcntl.c: Likewise.
	* file-getcontrol.c: Likewise.
	* file-getfh.c: Likewise.
	* file-getlinknode.c: Likewise.
	* file-lock.c: Likewise.
	* file-reparent.c: Likewise.
	* file-set-size.c: Likewise.
	* file-set-trans.c: Likewise.
	* file-statfs.c: Likewise.
	* file-sync.c: Likewise.
	* file-syncfs.c: Likewise.
	* file-utimes.c: Likewise.
	* fsys-forward.c: Likewise.
	* fsys-get-options.c: Likewise.
	* fsys-getroot.c: Likewise.
	* fsys-goaway.c: Likewise.
	* fsys-set-options.c: Likewise.
	* fsys-stubs.c: Likewise.
	* fsys-syncfs.c: Likewise.
	* io-async-icky.c: Likewise.
	* io-async.c: Likewise.
	* io-duplicate.c: Likewise.
	* io-identity.c: Likewise.
	* io-map.c: Likewise.
	* io-modes-get.c: Likewise.
	* io-modes-off.c: Likewise.
	* io-modes-on.c: Likewise.
	* io-owner-get.c: Likewise.
	* io-owner-mod.c: Likewise.
	* io-pathconf.c: Likewise.
	* io-read.c: Likewise.
	* io-readable.c: Likewise.
	* io-reauthenticate.c: Likewise.
	* io-restrict-auth.c: Likewise.
	* io-revoke.c: Likewise.
	* io-seek.c: Likewise.
	* io-select.c: Likewise.
	* io-stat.c: Likewise.
	* io-stubs.c: Likewise.
	* io-write.c: Likewise.

	* Makefile (mig-sheader-prefix): New variable.
	(installhdrs): Add trivfs_*_S.h for fs, io, fsys (server stub headers).