@@ -1,3 +1,7 @@
+2003-10-11  Marcus Brinkmann  <marcus@gnu.org>
+
+	* nosenders.c, notify-stubs.c: Remove obsolete files.
+
 2003-02-15  Roland McGrath  <roland@frob.com>
 
 	* Makefile (installhdrs): Add generated headers only ifndef no_deps.
